fix bug extra space on profile html

--- a/static/profile.css
+++ b/static/profile.css
@@ -6,6 +6,9 @@
   margin: 0px;
   padding: 0px;
 }
+html{
+  overflow-x: hidden;
+}
 
 .top-bar {
   width: 100%;
